--- a/monIdentite.css
+++ b/monIdentite.css
@@ -1,11 +1,12 @@
 html{background-color: gray;
 width: 100%}
-body{background-color:#9ACD32;/*couleur yellowGreen*/
-width: 900px;
+body{font-family: sans-serif,verdana;
+background-color:#9ACD32;/*couleur yellowGreen*/
+width: 1200px;
 margin-left: auto;
 margin-right: auto;
 overflow-x :hidden;}
-figure p{position: relative;
+figure p{position: absolute;
 color: red;}	
 figure{background-image: url(jajaId.jpg);
 width: 780px;
@@ -20,3 +21,58 @@ margin-right: auto;
 background-color: #FFE4B5;/*couleur mocassin*/
 overflow:scroll;
 overflow-x:hidden;}
+
+img,#imgGauche{margin: 0.75em;
+margin-top: 0.5em;	
+position: absolute;	
+display:block; 
+width: 120px;
+height: 190px;
+border-radius: 42px;
+/*border: 0.5px solid black;*/
+}
+#imgGaucheGauche{margin: 0.75em;
+margin-top: 0.5em;	
+position: absolute;	
+display:block; 
+width: 120px;
+height: 190px;
+border-radius: 42px;
+}
+
+/*@keyframes boxMovementD{
+
+0%{top: 0px; left: 1000px; transform: rotate(90deg);#9ACD32;/*couleur yellowGreentransform: rotate(-90deg)}
+
+25%{top: 0px; left: 1000px; transform: rotate(180deg); background: blue,#7B68EE;}
+
+50%{top: 0px; left: 1000px; transform: rotate(240deg) ; background: blue;}
+
+70%{top: 0px; left: 1000px; transform: rotate(360deg); background: blue,#4682B4;}
+
+100%{top: 0px; left: 1000px; transform: rotate(0deg); background: blue;
+transform: rotate(-90deg);}
+
+}
+
+#imgDroiteDroite{-webkit-animation: boxMovementD 15s;}
+
+*/
+@keyframes boxMovementG{
+
+0%{top: 0px; left: 120px; transform: rotate(90deg);background: #9ACD32/*couleur yellowGreen*/;transform: rotate(-90deg)}
+
+25%{top: 100px; left: 120px; transform: rotate(180deg); background: #9ACD32;/*couleur yellowGreen*/}
+
+50%{top: 200px; left: 120px; transform: rotate(240deg) ; background: #9ACD32;/*couleur yellowGreen*/}
+
+70%{top: 400px; left: 120px; transform: rotate(360deg); background: #9ACD32;/*couleur yellowGreen*/}
+
+100%{top: 500px; left: 120px; transform: rotate(0deg); background-color: #9ACD32;/*couleur yellowGreen*/
+transform: rotate(-90deg);}
+
+}
+#imgGaucheGauche{-webkit-animation: boxMovementG 15s;
+-webkit-animation-timing-function: ease-out;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:alternate;}
